# rpi-imgpatcher

./: .gitignore  Cargo.toml  PATCHERFILE.md  README.md  TEST.md
.github/workflows/: release.yml  test.yml  test_ffi.yml
include/: rpi_imgpatcher.h
src/: cli.rs  ffi.rs  ffi_debug.rs  lib.rs  main.rs  rpi_image.rs
src/ffi/: progress_writer.rs
src/patcher/: instruction.rs  mod.rs  parser.rs
src/rpi_image/: error.rs  fat_file.rs  image_io.rs  layout.rs  progress_reader.rs  progress_writer.rs  save.rs  source_image.rs
tests/ffi_c/: Makefile  main.c  test
