[package]
name = "rpi-imgpatcher"
version = "0.9.2"
edition = "2024"

authors = ["Arnaud 'red' Rouyer"]
readme = "README.md"
license = "MIT"
description = "A tool to customize Raspberry Pi OS images by patching the boot partition without mounting or rebuilding the system."
homepage = "https://github.com/joshleaves/rpi-imgpatcher"
repository = "https://github.com/joshleaves/rpi-imgpatcher"

keywords = ["raspberry-pi", "disk-image", "fat32", "ffi", "image"]
categories = ["filesystem", "command-line-utilities"]

[lib]
crate-type = ["rlib", "staticlib"]

[[bin]]
name = "rpi-imgpatcher"
path = "src/cli.rs"

[dependencies]
fatfs = "0.3.6"
fscommon = "0.1.1"
lzma-rust2 = { version = "0.16.2", features = ["xz", "std"] }
mbrman = "0.6.1"
tempfile = "3.27.0"

[dev-dependencies]
crc32fast = "1.5.0"
uuid = { version = "1.23.0", features = ["v4"] }

[package.metadata.cbindgen]
language = "C"
pragma_once = true
include_guard = "RPI_IMGPATCHER_H"

[package.metadata.cbindgen.export]
include = [
  "rpi_image_new",
  "rpi_image_write_file",
  "rpi_image_write_bytes",
  "rpi_image_write_string",
  "rpi_image_append_bytes",
  "rpi_image_append_string",
  "rpi_image_save_to_file",
]
