[package]
name = "rpi-imgpatcher"
version = "0.9.6"
edition = "2024"

authors = ["Arnaud 'red' Rouyer"]
readme = "README.md"
license = "MIT"
description = "A tool to customize Raspberry Pi OS images by patching the boot partition without mounting or rebuilding the system."
homepage = "https://github.com/joshleaves/rpi-imgpatcher"
repository = "https://github.com/joshleaves/rpi-imgpatcher"

keywords = ["raspberry-pi", "disk-image", "fat32", "ffi", "image"]
categories = ["filesystem", "command-line-utilities"]

exclude = ["tests/**"]

[lib]
crate-type = ["rlib", "staticlib"]

[[bin]]
name = "rpi-imgpatcher"
path = "src/cli.rs"

[features]
default = []
ffi_debug = []
buffered_copy = []

[dependencies]
fatfs = "0.3.6"
fscommon = "0.1.1"
lzma-rust2 = { version = "0.16.2", features = ["xz", "std"] }
mbrman = "0.6.1"
tempfile = "3.27.0"

[dev-dependencies]
crc32fast = "1.5.0"
uuid = { version = "1.23.1", features = ["v4"] }

